# hkill

./: README.md  hkill.cabal  stack.yaml
app/: Main.hs
src/System/Linux/: Process.hs
