name:                hkill
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psibi/hkill#readme
license:             BSD3
license-file:        LICENSE
author:              Sibi Prabakaran
maintainer:          sibi@psibi.in
copyright:           Copyright: (c) 2017 Sibi
category:            Terminal, GUI, Unix, Linux
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Linux.Process
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , attoparsec
                     , text
                     , unix
                     , filepath
                     , directory
  default-language:    Haskell2010

executable hkill
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brick
                     , hkill
                     , microlens
                     , microlens-th
                     , vty
                     , vector
                     , text
  default-language:    Haskell2010

test-suite hkill-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hkill
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/psibi/hkill
